Recompute overflow when needed.

Bug: 787565
Change-Id: I46d5c0a28fe247c4382154347d82d18491360452
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2