third_party/WebKit/Source/core/layout/LayoutObject.h
@@ -1740,6 +1740,8 @@ class CORE_EXPORT LayoutObject : public ImageResourceObserver,
   // Returns the bounding box of the visual rects of all fragments.
   LayoutRect FragmentsVisualRectBoundingBox() const;
 
+  void SetNeedsOverflowRecalcAfterStyleChange();
+
   // Painters can use const methods only, except for these explicitly declared
   // methods.
   class CORE_EXPORT MutableForPainting {
@@ -2130,8 +2132,6 @@ class CORE_EXPORT LayoutObject : public ImageResourceObserver,
                           const CursorList* new_cursors);
   void CheckCounterChanges(const ComputedStyle* old_style,
                            const ComputedStyle* new_style);
-
-  void SetNeedsOverflowRecalcAfterStyleChange();
 
   // Walk up the parent chain and find the first scrolling block to disable
   // scroll anchoring on.
